Fixed progress handle in reading mode on mobile

--- a/app/assets/stylesheets/BY_styles_General.css
+++ b/app/assets/stylesheets/BY_styles_General.css
@@ -2920,7 +2920,7 @@ label{
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 	z-index: 4;
 	position: relative;
-	top: -5px;
+	top: -10px;
 	margin-right: -8px;
 }
 .minimized .rm-control-panel{
@@ -3857,7 +3857,7 @@ a .by-icon-v02:disabled{
 	border-radius: 3px;
 	background-color: #907989;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
-	top: -6px;
+	top: -10px;
 	margin-right: -16px;
 	color: #fff;
 	text-align: center;
